# fbpml-systor22

./: .gitignore  GNUmakefile  README.md  config  quick_run.sh  run_multi.sh
benches/chameleon/: Dockerfile  server.py
benches/cnn_serving/: Dockerfile  server.py  squeezenet.py
benches/helloworld/: server.py
benches/image_rotate/: Dockerfile  server.py
benches/json_serdes/: Dockerfile  server.py
benches/lr_serving/: Dockerfile  server.py
benches/lr_training/: Dockerfile  server.py
benches/matmul_fb/: server.py
benches/matmul_fbpml/: Dockerfile  server.py
benches/pyaes/: Dockerfile  server.py
benches/rnn_serving/: Dockerfile  rnn.py  server.py
benches/video_processing/: Dockerfile  server.py
benches/video_processing/scripts/: build_rootfs_multi.sh  populate_multi.sh
fbpml-rs/: Cargo.toml
fbpml-rs/fbpml/: Cargo.toml
fbpml-rs/fbpml-client/: Cargo.toml
fbpml-rs/fbpml-client/src/: main.rs
fbpml-rs/fbpml-multiclient/: Cargo.toml
fbpml-rs/fbpml-multiclient/src/: main.rs
fbpml-rs/fbpml-rpc/: Cargo.toml  build.rs
fbpml-rs/fbpml-rpc/src/: lib.rs
fbpml-rs/fbpml/src/: lib.rs
kernel/guest/: config-vmlinux-5.14.6-ckatsak-fc
kernel/host/: config-5.1.0ckatsak-nova+
patches/: firecracker_ckatsak-fbpml-v1.0.0.patch  firecracker_cslab-thp-v0.25.2.patch
proto/: Makefile  functionbench_pmem_local.proto
scripts/: build_rootfs_multi.sh  host_net.sh  host_net_cleanup.sh  populate_multi.sh  run_single.sh  setup_minio.sh
scripts/build-snapshots-rs/: Cargo.toml
scripts/build-snapshots-rs/src/: main.rs
scripts/cp_2M/: .gitignore  Makefile  cp_2M.c
