[package]
name = "fbpml"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/cslab-ntua/fbpml-systor22"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]

[dependencies]
anyhow = "^1"
fbpml-rpc = { path = "../fbpml-rpc" }
prost = "^0.9"
prost-types = "^0.9"
tokio = { version = "^1.17", features = ["macros", "rt-multi-thread"] }
tonic = "^0.6"
